Terminando de exportar los servicios

--- a/src/app/components/simulacion/simulacion.component.html
+++ b/src/app/components/simulacion/simulacion.component.html
@@ -1,3 +1,29 @@
-<p>
-  simulacion works!
-</p>
+<div class="container">
+    <div class="text-center"><button type="button" class="btn btn-outline-primary">Iniciar Simulación</button></div>
+    <hr>
+  <table class="table table-hover table-responsive">
+    <thead class="thead-dark">
+    <tr>
+      <th scope="col">Paradero</th>
+      <th scope="col">Pasajeros Iniciales</th>
+      <th scope="col"># Aleatorios Subir</th>
+      <th scope="col">Pasajeros Suben</th>
+      <th scope="col"># Aleatorios Bajar</th>
+      <th scope="col">Pasajeros Bajan</th>
+      <th scope="col">Pasajeros Finales</th>
+      <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>  
+    <tr class="text-center">
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
