--- a/src/app/components/aleatorios/aleatorios.component.html
+++ b/src/app/components/aleatorios/aleatorios.component.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-sm-4">
     <h4 class="text-center">Números Aleatorios</h4>
-    <table class="table table-hover table-responsive">
-      <thead>
+    <table class="table table-hover table-responsive table-striped">
+      <thead class="thead-light text-center">
       <tr>
         <th scope="col">Item</th>
         <th scope="col">Valor</th>
